# http_web_server

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md
conf/: mywebserv.conf
pages/: code_descr.csv
site/sites/particles/: particles.js
src/authorization/: Authorization.cpp
src/autoindex/: IndexModule.cpp  IndexModule.hpp
src/cgi/: CgiModule.cpp  CgiModule.hpp  Environment.cpp
src/components/: ABody.cpp  FileBody.cpp  FileBody.hpp  Header.cpp  TextBody.cpp  TextBody.hpp
src/core/: Client.cpp  Client.hpp  Dispatcher.cpp  Dispatcher.hpp  Server.cpp  Server.hpp  ServerInit.cpp  main.cpp
src/errors/: ErrorPager.cpp  ErrorPager.hpp
src/interfaces/: IBody.hpp  IHeader.hpp  IIndexModule.hpp  IRequestReciever.hpp  IServer.hpp  ITimeMachine.hpp
src/methods/: PostBuildPolicy.cpp  PutBuildPolicy.cpp
src/parsing/: ConfigParser.cpp  ConfigParser.hpp
src/request/: BasicRequest.cpp  BodyReader.cpp  BodyReader.hpp  GetBuildPolicy.cpp  Request.cpp  RequestReceiver.cpp  RequestReceiver.hpp
src/response/: ABuildPolicy.cpp  ABuildPolicy.hpp  BasicResponse.cpp  HeadBuildPolicy.cpp  HeadBuildPolicy.hpp  HeaderMaker.cpp  HeaderMaker.hpp  ResponseBuilder.cpp  ResponseBuilder.hpp  ResponseSender.cpp  ResponseSender.hpp  TextResponse.cpp  TextResponse.hpp
src/utils/: TimeMachine.cpp  TimeMachine.hpp  defines.hpp  ft_strlen.cpp  getFileExtension.cpp  strToLower.cpp  webserv.hpp
unit_tests/: body_reader_test.cpp  cgi_module_tester.cpp  env_tester.cpp  testerIndexModule.cpp  testerReqReceiver.cpp
webserv/: @__pthread_kill  ABody.cpp  ABody.hpp  ABuildPolicy.cpp  ABuildPolicy.hpp  Authorization.cpp  Authorization.hpp  BasicRequest.cpp  BasicRequest.hpp  BasicResponse.cpp  BasicResponse.hpp  BodyReader.cpp  BodyReader.hpp  CgiModule.cpp  CgiModule.hpp  Client.cpp  Client.hpp  ConfigParser.cpp  ConfigParser.hpp  Dispatcher.cpp  Dispatcher.hpp  DispatcherEventArgs.hpp  EnumHeader.cpp  EnumHeader.hpp  Environment.cpp  Environment.hpp  ErrorPager.cpp  ErrorPager.hpp  FakeFakeRequestValidator.cpp  FakeFakeRequestValidator.hpp  FakeRequestValidator.cpp  FakeRequestValidator.hpp  FakeTimeMachine.cpp  FakeTimeMachine.hpp  FileBody.cpp  FileBody.hpp  FileManager.cpp  FileManager.hpp  GetBuildPolicy.cpp  GetBuildPolicy.hpp  (+46 more)
webserv/conf/: mywebserv.conf
webserv/error_pages/: nginx_template.html
webserv/interfaces/: IBody.hpp  ICgiController.hpp  IClient.hpp  IFileManager.hpp  IHeader.hpp  IIndexModule.hpp  ILogger.hpp  ILoggerEvent.hpp  IRequest.hpp  IRequestReciever.hpp  IRequestValidator.hpp  IResponse.hpp  IResponseBuilder.hpp  IResponseSender.hpp  IServer.hpp  ITimeMachine.hpp
webserv/resources/: index.html
webserv/resources/42_test/: post_body
webserv/resources/42_test/YoupiBanane/: youpi.bla
webserv/resources/42_test/YoupiBanane/nop/: other.pouic  youpi.bad_extension
webserv/resources/sites/files/00/lorem/: cat
webserv/resources/sites/files/01/Pallas's cat - Wikipedia_files/: load(1).php  load.php
webserv/resources/sites/files/01/Pallas's_cat/: Pa___________________llas's_cat.htm
webserv/resources/sites/particles/: index.html  style.css
webserv/resources/sites/trump/: index.html
webserv/tests/: body_reader_test.cpp  env_tester.cpp  reader.cpp  testerFileManager.cpp  testerTimeFormatted.cpp
webserv/trash/: testerSplitString.cpp  testerTimeFormatted.cpp  unitTester.cpp
webserv/trash_new/: cgi_module_tester.cpp  testerFileManager.cpp  testerIndexModule.cpp  testerReqReceiver.cpp
webserv/utils/: Base64.cpp  Utils.cpp  fdToString.cpp  ft_memcpy.cpp  ft_strcmp.cpp  ft_strlen.cpp  getCodeDescr.cpp  getFileExtension.cpp  getFileSize.cpp  getHeaderKey.cpp  getMethod.cpp  get_time_udiff.cpp  isNumber.cpp  isParsedHeader.cpp  known_types.txt  methodNeedsBody.cpp  mimi_types.txt  splitString.cpp  timeFormatted.cpp  to_string.cpp
webserv/utils/gnl/: get_next_line.cpp  get_next_line.hpp  get_next_line_utils.cpp
